--- a/index.html
+++ b/index.html
@@ -323,11 +323,11 @@
                   <img src="./assets/images/avatar-1.png" alt="Daniel lewis" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Daniel lewis</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Kwame Motion</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
+                    Richmond was hired to create a corporate identity. We were very pleased with the work done. She has a
                     lot of experience
                     and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
                     consectetur adipiscing
@@ -345,11 +345,11 @@
                   <img src="./assets/images/avatar-2.png" alt="Jessica miller" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Jessica miller</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Maame Esi</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
+                    Richmond was hired to create a corporate identity. We were very pleased with the work done. She has a
                     lot of experience
                     and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
                     consectetur adipiscing
@@ -371,7 +371,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
+                    Richmond was hired to create a corporate identity. We were very pleased with the work done. She has a
                     lot of experience
                     and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
                     consectetur adipiscing
@@ -393,7 +393,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
+                    Richmond was hired to create a corporate identity. We were very pleased with the work done. She has a
                     lot of experience
                     and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
                     consectetur adipiscing
@@ -439,7 +439,7 @@
 
               <div data-modal-text>
                 <p>
-                  Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
+                  Richmond was hired to create a corporate identity. We were very pleased with the work done. She has a
                   lot of experience
                   and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
                   consectetur adipiscing
@@ -624,9 +624,9 @@
               <span>2025</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Developed a unique landing page for Modes Power Services.
+                The webpage allows customers to contact, view and to
+                enquire on projects and available time for work.
               </p>
 
             </li>
@@ -638,9 +638,9 @@
               <span>2024</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                As a Management Information Systems Intern at Vanguard Assurance,
+                I assisted with data analysis, report generation, and system support.
+                I contributed to improving business processes by helping maintain and optimize information systems for better efficiency and decision-making.
               </p>
 
             </li>
@@ -652,9 +652,23 @@
               <span>2024</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                As a Graphic Designer at Kenkey Haven, I created engaging visual content for branding and marketing.
+                My work included designing logos, menus,
+                and promotional materials to enhance the company's identity and attract customers.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Smart Hive Labs - UI/UX Designer</h4>
+
+              <span>2025 - present</span>
+
+              <p class="timeline-text">
+                I collaborate with cross-functional teams to design intuitive
+                digital experiences. My role includes user research, wireframing, prototyping,
+                and delivering visually appealing interfaces that enhance usability and meet business goals.
               </p>
 
             </li>
