title edit: Update index.html# Update index.html

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <h1 class="name" title="Richmond Delasi">Richmond Delasi<br>Tamakloe</h1>
           
 
-          <p class="title">UI/UX Designer</p>
+          <p class="title">Flutter Dev and UI/UX Designer</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
