--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://www.linkedin.com/in/richmond-tamakloe-a98a5a326/" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://github.com/rtdelasi" class="social-link">
               <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
@@ -610,9 +610,9 @@
               <span>2024</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Assisted in the documentation of financial statements and reports, ensuring compliance with company policies and regulations.
+                Supported in processing invoices, managing payments, and handling customer and vendor accounts.
+
               </p>
 
             </li>
@@ -1224,8 +1224,8 @@
         <section class="mapbox" data-mapbox>
           <figure>
             <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3971.312034088982!2d-0.35217692601673534!3d5.520630994459455!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNcKwMzEnMTQuMyJOIDDCsDIwJzU4LjYiVw!5e0!3m2!1sen!2sgh!4v1751889210548!5m2!1sen!2sgh" 
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-          </iframe>
+              width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
           </figure>
         </section>
 
