Clickable links updated

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://instagram.com/nl.delasi/" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
@@ -553,8 +553,9 @@
               <span>2019 — 2022</span>
 
               <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
+                Completed Senior High School at Our Lady of Grace SHS, where I developed a strong foundation in science and technology.
+                I was actively involved in various extracurricular activities, including the robotics, basket ball team and cadet,
+                which helped enhance my analytical and communication skills.
               </p>
 
             </li>
@@ -566,9 +567,8 @@
               <span>2022 — present</span>
 
               <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
+                Currently still an undergraduate student at KNUST, pursuing a degree in Computer Science.
+                I am actively involved in various projects and internships to enhance my skills and gain practical experience in the field of technology.
               </p>
 
             </li>
@@ -596,9 +596,8 @@
               <span>2025 — Present</span>
 
               <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
+                I ensure that the user experience is at the forefront of our design process by conducting user research,
+                and creating wireframes and prototypes.
               </p>
 
             </li>
@@ -610,9 +609,8 @@
               <span>2024</span>
 
               <p class="timeline-text">
-                Assisted in the documentation of financial statements and reports, ensuring compliance with company policies and regulations.
-                Supported in processing invoices, managing payments, and handling customer and vendor accounts.
-
+                Assisted in the documentation and review of the ISO documentation, ensuring compliance with company and ISO policies and regulations.
+                Supported in network management and Information Security threat assessment.
               </p>
 
             </li>
@@ -751,12 +749,12 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Artificial Intelligence</h5>
-                <data value=65>65%</data>
+                <h5 class="h5">User Interface Design</h5>
+                <data value=75>75%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 65%;"></div>
+                <div class="skill-progress-fill" style="width: 75%;"></div>
               </div>
 
             </li>
@@ -912,7 +910,7 @@
                   <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Brawlhalla</h3>
+                <h3 class="project-title">AgriDiary</h3>
 
                 <p class="project-category">Applications</p>
 
@@ -930,7 +928,7 @@
                   <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
                 </figure>
 
-                <h3 class="project-title">DSM.</h3>
+                <h3 class="project-title">DSM</h3>
 
                 <p class="project-category">Web design</p>
 
