added certifications section and downloads directory

--- a/index.html
+++ b/index.html
@@ -129,19 +129,19 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="https://www.linkedin.com/in/richmond-tamakloe-a98a5a326/" class="social-link">
+            <a href="https://www.linkedin.com/in/richmond-tamakloe-a98a5a326/" class="social-link" target="_blank">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="https://github.com/rtdelasi" class="social-link">
+            <a href="https://github.com/rtdelasi" class="social-link" target="_blank">
               <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="https://instagram.com/nl.delasi/" class="social-link">
+            <a href="https://instagram.com/nl.delasi/" class="social-link" target="_blank">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
@@ -532,20 +532,6 @@
 
           <ol class="timeline-list">
 
-            <!-- <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">University school of the arts</h4>
-
-              <span>2007 — 2008</span>
-
-              <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
-              </p>
-
-            </li> -->
-
             <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">Our Lady of Grace SHS, Mampongteng, Kumasi</h4>
@@ -615,18 +601,6 @@
 
             </li>
 
-            <li class="timeline-item">
-
-              <h4 class="h4 timeline-item-title">Modes Power Services - Web Developer</h4>
-
-              <span>2025</span>
-
-              <p class="timeline-text">
-                Developed a unique landing page for Modes Power Services.
-                The webpage allows customers to contact, view and to
-                enquire on projects and available time for work.
-              </p>
-
             </li>
 
             <li class="timeline-item">
@@ -674,6 +648,77 @@
           </ol>
 
         </section>
+
+        <section class="timeline">
+
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">Certifications</h3>
+          </div>
+
+          <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Fundamentals of  UI/UX - Coursera</h4>
+
+              <span>22nd  January - 30th May, 2023</span>
+
+              <p class="timeline-text">
+                I ensure that the user experience is at the forefront of our design process by conducting user research,
+                and creating wireframes and prototypes.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Fundamentals of Cloud Computing - IBM</h4>
+
+              <span>24th  July - 29th July, 2025</span>
+
+              <p class="timeline-text">
+                Assisted in the documentation and review of the ISO documentation, ensuring compliance with company and ISO policies and regulations.
+                Supported in network management and Information Security threat assessment.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Fundamentals of Cybersecurity - IBM</h4>
+
+              <span>30th  July - 3rd August, 2025</span>
+
+              <p class="timeline-text">
+                Developed a unique landing page for Modes Power Services.
+                The webpage allows customers to contact, view and to
+                enquire on projects and available time for work.
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Python for programmers - IBM/Codecademy</h4>
+
+              <span>4th  August - 8th August, 2025</span>
+
+              <p class="timeline-text">
+                Developed a unique landing page for Modes Power Services.
+                The webpage allows customers to contact, view and to
+                enquire on projects and available time for work.
+              </p>
+
+            </li>
+
+          </ol>
+
+        </section>
+        
 
         <section class="skill">
 
